# advanced_C_standard_library

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_and_run.sh
.theia/: tasks.json
include/: array.h  file.h
include/acl/: alignof.h  array.h  file.h  hashmap.h  sizeof.h
src/: array.c  array.h  file.c  hashmap.c  main.c
