project(advanced_C_standard_library C)
cmake_minimum_required(VERSION 3.17)
include_directories(include)
file(GLOB ACLSOURCES "src/*.c")
add_executable(acl ${ACLSOURCES})
find_program(CCACHE_PROGRAM ccache)
if(CCACHE_PROGRAM)
    set(CMAKE_C_COMPILER_LAUNCHER "${CCACHE_PROGRAM}")
endif()
set( CMAKE_EXPORT_COMPILE_COMMANDS ON )
set_property(TARGET acl PROPERTY C_STANDARD 11)
INCLUDE(TestBigEndian)
TEST_BIG_ENDIAN(IS_BIG_ENDIAN)
if(IS_BIG_ENDIAN)
	add_compile_definitions(ACL_BIG_ENDIAN)
else()
	add_compile_definitions(ACL_LITTLE_ENDIAN)
endif()
target_link_libraries(acl PRIVATE m)
